DevTools: override referrer policy for the request if referer header is overriden

Bug: 787173
Change-Id: Ia5d9aec2b96b5cfbfb25ff71d3a436a3575c16fd
Reviewed-on: https://chromium-review.googlesource.com/782141
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Andrey Kosyakov <caseq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#518362}
Former-commit-id: 2d9ed3b52ac5e58252357c0b75eef72f84ba2c1e